support shared cockpit

--- a/A32NX/SimObjects/AirPlanes/Asobo_A320_NEO/panel/panel.cfg
+++ b/A32NX/SimObjects/AirPlanes/Asobo_A320_NEO/panel/panel.cfg
@@ -124,6 +124,13 @@ texture=$MFD2
 
 htmlgauge00=Airliners/A320_Neo/MFD/A320_Neo_MFD.html?Index=2, 0,0,1280,1280
 
+[Vcockpit17]
+size_mm=1024,768
+pixel_size=1024,768
+texture=$SCREEN_3
+background_color=255,0,0
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=YourControls/Gauges/YourControlGauge.wasm&wasm_gauge=Interface, 0,0,1024,768
+
 [VPainting01]
 size_mm				= 2048,512
 texture				= $RegistrationNumber
